--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     --secondary-text-color: #191919;
     --secondary-color: #868686;
     --tertiary-color: #eff3f4;
+    --secondery-bg-color:#5c1011;
   }
 
 
@@ -299,3 +300,171 @@ text-transform: uppercase;
       width: 100px;
       height: 100px;
     }
+
+    /*Colaboradores*/
+
+    #team{
+     position: relative;
+     margin-bottom: 2rem;
+    }
+
+    #team h2{
+      text-align: center;
+      font-size: 3rem;
+      max-width: 1000px;
+      margin: 0 auto;
+      position: relative;
+      z-index: 2;
+    }
+    #team h2 span{
+      color: var(--main-color);
+    }
+    #team .square{
+     background-color: var(--tertiary-color);
+      width: 100px;
+      height: 100px;
+      left: 50%;
+      margin-top: -50px;
+      top: -25px;
+    }
+    .employees{
+      display: flex;
+      gap: 2rem;
+      padding: 2rem;
+      text-align: center;
+    }
+    .employee-name{
+      color: var(--main-color);
+      font-size: 1.2rem;
+      font-weight: bold;
+      text-transform: uppercase;
+      margin: 0.5rem 0;
+    }
+    /*Contato*/
+    #contact{
+      background-color: var(--main-color);
+      gap: 0;
+      padding-bottom:5rem;
+
+    }
+    #contact-information{
+      position: relative;
+      text-align: left;
+      padding: 3rem;
+      flex: 1 1 0;
+    }
+    #contact-information .section-subtitle{
+      color: var(--primary-text-color);
+    }
+    #contact-information i {
+      position: absolute;
+      top: 0;
+      left: 0;
+     background-image: var(--primary-text-color);
+     color: var(--main-color);
+
+    }
+    #contact-information form {  
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    #contact-information .form-control{
+      display: flex;
+      gap: 1rem;
+    }
+    #contact-information input,
+    #contact-information textarea{
+      flex: 0,5;
+      padding: 1rem;
+      border: none;
+    }
+    #contact-information .btn{
+      align-self: start;
+      background-color: var(--secondary-color);
+      font-size: 1.2rem;
+      transition: 0.3s;
+    }
+    #contact-information .btn:hover{
+      background-color: var(--primary-text-color);
+      color: var(--main-color);
+    }
+    /*Rodapé*/
+    #footer{
+      color: var(--primary-text-color);
+      background-color: var(--secondery-bg-color);
+      display: flex;
+      justify-content: space-around;
+      padding: 3rem 3rem 5rem;
+
+    }
+    #footer i{
+      font-size: 1rem;
+      padding: 0,3rem;
+
+    }
+    #footer a{
+      color: var(--primary-text-color);
+  
+    }
+    .contact-info,
+    .links-container {
+      width: 20%;
+    }
+    .footer-brand{
+      margin-bottom: 2rem;
+    }
+      .footer-brand h2{
+     background-color: var(--main-color);
+     margin-bottom: 0,5rem;
+     padding: 1rem;
+      }
+      .contact-info p{
+        margin-bottom: 1rem;
+      }
+      .contact-info p i{
+        background-color: transparent;
+        color: var(--main-color);
+        padding: 0;
+
+      }
+      .social-networks{
+        margin-bottom: 1rem;
+      }
+      .networks{
+        margin-top: 2rem;
+        display: flex;
+        gap: 1rem;
+
+      }
+      #footer .networks i{
+        padding: 1rem;
+
+      }
+      .links-container h4{
+        text-transform: uppercase;
+        margin-bottom: 3rem;
+
+      }
+      .links-container nav{
+        display: flex;
+        flex-direction: column;
+
+      }
+      .links-container nav a{
+        padding-bottom: 1rem;
+        margin-bottom: 1rem;
+        border-bottom: 1px solid var(--secondary-color);
+      }
+      .phone-number{
+        display: flex;
+        border-radius: 1px solid var(--main-color);
+        gap:1rem;
+        align-items: center;
+        margin-bottom: 1rem;
+
+      }
+      .phone-info {
+        color: var(--secondary-color);
+      }
+
